# gazebo_hydrodynamics

./: CMakeLists.txt  README.md  package.xml
src/: BaseModelPlugin.cpp  BaseModelPlugin.h  VirtualMassPlugin.cpp  VirtualMassPlugin.h  ViscousDampingPlugin.cpp  ViscousDampingPlugin.h  virtual_mass_plugin.cpp  virtual_mass_plugin.h  viscous_damping_plugin.cpp  viscous_damping_plugin.h
